# encoding

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Encoding.cpp  Encoding.h
